--- a/environment.yml
+++ b/environment.yml
@@ -3,337 +3,337 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - _py-xgboost-mutex=2.0=cpu_0
-  - _tflow_select=2.3.0=eigen
-  - absl-py=1.4.0=pyhd8ed1ab_0
-  - aiohttp=3.8.5=py38h01eb140_0
-  - aiosignal=1.3.1=pyhd8ed1ab_0
-  - alsa-lib=1.2.8=h166bdaf_0
-  - anyio=4.0.0=pyhd8ed1ab_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py38h0a891b7_3
-  - arrow=0.17.0=py38h578d9bd_1
-  - astor=0.8.1=pyh9f0ad1d_0
-  - asttokens=2.4.0=pyhd8ed1ab_0
-  - astunparse=1.6.3=pyhd8ed1ab_0
-  - async-lru=2.0.4=pyhd8ed1ab_0
-  - async-timeout=4.0.3=pyhd8ed1ab_0
-  - attr=2.5.1=h166bdaf_1
-  - attrs=23.1.0=pyh71513ae_1
-  - babel=2.12.1=pyhd8ed1ab_1
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
-  - beautifulsoup4=4.12.2=pyha770c72_0
-  - bleach=6.0.0=pyhd8ed1ab_0
-  - blinker=1.6.2=pyhd8ed1ab_0
-  - brotlipy=0.7.0=py38h0a891b7_1005
-  - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.19.1=hd590300_0
-  - ca-certificates=2023.7.22=hbcca054_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - cachetools=5.3.1=pyhd8ed1ab_0
-  - cairo=1.16.0=hbbf8b49_1016
-  - certifi=2023.7.22=pyhd8ed1ab_0
-  - cffi=1.15.1=py38h4a40e3a_3
-  - charset-normalizer=3.2.0=pyhd8ed1ab_0
-  - click=8.1.7=unix_pyh707e725_0
-  - cloudpickle=3.0.0=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.1.4=pyhd8ed1ab_0
-  - cryptography=41.0.3=py38hcdda232_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - cytoolz=0.12.2=py38h01eb140_1
-  - dask-core=2022.12.1=pyhd8ed1ab_0
-  - dbus=1.13.6=h5008d03_3
-  - debugpy=1.7.0=py38h17151c0_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - enum34=1.1.10=py38h32f6830_2
-  - exceptiongroup=1.1.3=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - expat=2.5.0=hcb278e6_1
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fqdn=1.5.1=pyhd8ed1ab_0
-  - freetype=2.12.1=hca18f0e_1
-  - frozenlist=1.4.0=py38h01eb140_0
-  - fsspec=2023.10.0=pyhca7485f_0
-  - gast=0.3.3=py_0
-  - gettext=0.21.1=h27087fc_0
-  - glib=2.76.4=hfc55251_0
-  - glib-tools=2.76.4=hfc55251_0
-  - gmp=6.2.1=h58526e2_0
-  - google-auth=2.22.0=pyh1a96a4e_0
-  - google-auth-oauthlib=1.0.0=pyhd8ed1ab_1
-  - google-pasta=0.2.0=pyh8c360ce_0
-  - graphite2=1.3.13=h58526e2_1001
-  - grpcio=1.57.0=py38h94a1851_0
-  - gst-plugins-base=1.22.3=h938bd60_1
-  - gstreamer=1.22.3=h977cf35_1
-  - h5py=2.10.0=nompi_py38h513d04c_102
-  - harfbuzz=7.3.0=hdb3a94d_0
-  - hdf5=1.10.5=nompi_h5b725eb_1114
-  - icu=72.1=hcb278e6_0
-  - idna=3.4=pyhd8ed1ab_0
-  - imagecodecs-lite=2019.12.3=py38h71d37f0_5
-  - imageio=2.31.5=pyh8c1a49c_0
-  - importlib-metadata=6.8.0=pyha770c72_0
-  - importlib_metadata=6.8.0=hd8ed1ab_0
-  - importlib_resources=6.0.1=pyhd8ed1ab_0
-  - ipykernel=6.25.2=pyh2140261_0
-  - ipython=8.12.0=pyh41d4057_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=8.1.0=pyhd8ed1ab_0
-  - isoduration=20.11.0=pyhd8ed1ab_0
-  - jedi=0.19.0=pyhd8ed1ab_0
-  - jellyfish=1.0.0=py38h0cc4f7c_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - joblib=1.3.2=pyhd8ed1ab_0
-  - json5=0.9.14=pyhd8ed1ab_0
-  - jsonpointer=2.0=py_0
-  - jsonschema=4.19.0=pyhd8ed1ab_1
-  - jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
-  - jsonschema-with-format-nongpl=4.19.0=pyhd8ed1ab_1
-  - jupyter=1.0.0=py38h578d9bd_8
-  - jupyter-lsp=2.2.0=pyhd8ed1ab_0
-  - jupyter_client=8.3.1=pyhd8ed1ab_0
-  - jupyter_console=6.6.3=pyhd8ed1ab_0
-  - jupyter_core=4.12.0=py38h578d9bd_0
-  - jupyter_events=0.7.0=pyhd8ed1ab_2
-  - jupyter_server=2.7.3=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.4.4=pyhd8ed1ab_1
-  - jupyterlab=4.0.5=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - jupyterlab_server=2.24.0=pyhd8ed1ab_0
-  - jupyterlab_widgets=3.0.8=pyhd8ed1ab_0
-  - keras=2.4.3=pyhd8ed1ab_0
-  - keras-preprocessing=1.1.2=pyhd8ed1ab_0
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.5=py38h7f3f72f_0
-  - krb5=1.20.1=h81ceb04_0
-  - lame=3.100=h166bdaf_1003
-  - lcms2=2.15=haa2dc70_1
-  - ld_impl_linux-64=2.40=h41732ed_0
-  - lerc=4.0.0=h27087fc_0
-  - libabseil=20230125.3=cxx17_h59595ed_0
-  - libblas=3.9.0=17_linux64_openblas
-  - libcap=2.69=h0f662aa_0
-  - libcblas=3.9.0=17_linux64_openblas
-  - libclang=16.0.6=default_h1cdf331_1
-  - libclang13=16.0.6=default_h4d60ac6_1
-  - libcups=2.3.3=h36d4200_3
-  - libdeflate=1.18=h0b41bf4_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libevent=2.1.12=hf998b51_1
-  - libexpat=2.5.0=hcb278e6_1
-  - libffi=3.4.2=h7f98852_5
-  - libflac=1.4.3=h59595ed_0
-  - libgcc-ng=13.1.0=he5830b7_0
-  - libgcrypt=1.10.1=h166bdaf_0
-  - libgfortran-ng=13.1.0=h69a702a_0
-  - libgfortran5=13.1.0=h15d22d2_0
-  - libglib=2.76.4=hebfc3b9_0
-  - libgomp=13.1.0=he5830b7_0
-  - libgpg-error=1.47=h71f35ed_0
-  - libgrpc=1.57.0=h3905398_0
-  - libiconv=1.17=h166bdaf_0
-  - libjpeg-turbo=2.1.5.1=h0b41bf4_0
-  - liblapack=3.9.0=17_linux64_openblas
-  - libllvm16=16.0.6=h5cf9203_2
-  - libnsl=2.0.0=h7f98852_0
-  - libogg=1.3.4=h7f98852_1
-  - libopenblas=0.3.23=pthreads_h80387f5_0
-  - libopus=1.3.1=h7f98852_1
-  - libpng=1.6.39=h753d276_0
-  - libpq=15.3=hbcd7760_1
-  - libprotobuf=4.23.3=hd1fb520_1
-  - libsndfile=1.2.2=hbc2eb40_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.43.0=h2797004_0
-  - libstdcxx-ng=13.1.0=hfd8a6a1_0
-  - libsystemd0=254=h3516f8a_0
-  - libtiff=4.5.1=h8b53f26_1
-  - libuuid=2.38.1=h0b41bf4_0
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libwebp-base=1.3.1=hd590300_0
-  - libxcb=1.15=h0b41bf4_0
-  - libxgboost=1.7.6=cpu_h6728c87_5
-  - libxkbcommon=1.5.0=h5d7e998_3
-  - libxml2=2.11.5=h0d562d8_0
-  - libzlib=1.2.13=hd590300_5
-  - lime=0.2.0.1=pyhd8ed1ab_1
-  - locket=1.0.0=pyhd8ed1ab_0
-  - lz4-c=1.9.4=hcb278e6_0
-  - markdown=3.4.4=pyhd8ed1ab_0
-  - markupsafe=2.1.3=py38h01eb140_0
-  - matplotlib=3.3.4=py38h578d9bd_0
-  - matplotlib-base=3.3.4=py38h0efea84_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mistune=3.0.1=pyhd8ed1ab_0
-  - mpg123=1.31.3=hcb278e6_0
-  - multidict=6.0.4=py38h1de0b5d_0
-  - mysql-common=8.0.33=hf1915f5_2
-  - mysql-libs=8.0.33=hca2cd23_2
-  - nbclient=0.8.0=pyhd8ed1ab_0
-  - nbconvert=7.8.0=pyhd8ed1ab_0
-  - nbconvert-core=7.8.0=pyhd8ed1ab_0
-  - nbconvert-pandoc=7.8.0=pyhd8ed1ab_0
-  - nbformat=5.9.2=pyhd8ed1ab_0
-  - ncurses=6.4=hcb278e6_0
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - networkx=3.1=pyhd8ed1ab_0
-  - nltk=3.8.1=pyhd8ed1ab_0
-  - notebook=7.0.3=pyhd8ed1ab_0
-  - notebook-shim=0.2.3=pyhd8ed1ab_0
-  - nspr=4.35=h27087fc_0
-  - nss=3.92=h1d7d5a4_0
-  - numpy=1.19.5=py38h8246c76_3
-  - oauthlib=3.2.2=pyhd8ed1ab_0
-  - openjpeg=2.5.0=hfec8fc6_2
-  - openssl=3.1.4=hd590300_0
-  - opt_einsum=3.3.0=pyhd8ed1ab_1
-  - overrides=7.4.0=pyhd8ed1ab_0
-  - packaging=23.1=pyhd8ed1ab_0
-  - pandas=1.4.4=py38h47df419_0
-  - pandoc=3.1.3=h32600fe_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - partd=1.4.1=pyhd8ed1ab_0
-  - pathlib=1.0.1=py38h578d9bd_7
-  - patsy=0.5.3=pyhd8ed1ab_0
-  - pcre2=10.40=hc3806b6_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=10.0.0=py38h885162f_0
-  - pip=23.2.1=pyhd8ed1ab_0
-  - pixman=0.40.0=h36c2ea0_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
-  - platformdirs=3.10.0=pyhd8ed1ab_0
-  - ply=3.11=py_1
-  - pooch=1.7.0=pyha770c72_3
-  - prometheus_client=0.17.1=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.39=pyha770c72_0
-  - prompt_toolkit=3.0.39=hd8ed1ab_0
-  - protobuf=4.23.3=py38h830738e_0
-  - psutil=5.9.5=py38h1de0b5d_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pulseaudio-client=16.1=hb77b528_4
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - py-xgboost=1.7.6=cpu_py38h995e691_5
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.16.1=pyhd8ed1ab_0
-  - pyjwt=2.8.0=pyhd8ed1ab_0
-  - pyopenssl=23.2.0=pyhd8ed1ab_1
-  - pyparsing=3.1.1=pyhd8ed1ab_0
-  - pyqt=5.15.9=py38hffdaa6c_4
-  - pyqt5-sip=12.12.2=py38h17151c0_4
-  - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.8.17=he550d4f_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.18.0=pyhd8ed1ab_0
-  - python-json-logger=2.0.7=pyhd8ed1ab_0
-  - python_abi=3.8=3_cp38
-  - pytz=2023.3.post1=pyhd8ed1ab_0
-  - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pywavelets=1.4.1=py38h5eee18b_0
-  - pyyaml=6.0.1=py38h01eb140_0
-  - pyzmq=25.1.1=py38h509eb50_0
-  - qt-main=5.15.8=h01ceb2d_12
-  - qtconsole=5.4.4=pyhd8ed1ab_0
-  - qtconsole-base=5.4.4=pyha770c72_0
-  - qtpy=2.4.0=pyhd8ed1ab_0
-  - re2=2023.03.02=h8c504da_0
-  - readline=8.2=h8228510_1
-  - referencing=0.30.2=pyhd8ed1ab_0
-  - regex=2023.8.8=py38h01eb140_0
-  - requests=2.31.0=pyhd8ed1ab_0
-  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
-  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
-  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.10.2=py38h0cc4f7c_0
-  - rsa=4.9=pyhd8ed1ab_0
-  - scikit-image=0.19.3=py38h47df419_1
-  - scikit-learn=0.23.2=py38h5d63f67_3
-  - scipy=1.8.1=py38hea3f02b_2
-  - seaborn=0.12.2=hd8ed1ab_0
-  - seaborn-base=0.12.2=pyhd8ed1ab_0
-  - send2trash=1.8.2=pyh41d4057_0
-  - setuptools=68.1.2=pyhd8ed1ab_0
-  - sip=6.7.11=py38h17151c0_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.3.0=pyhd8ed1ab_0
-  - soupsieve=2.5=pyhd8ed1ab_1
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - statsmodels=0.13.5=py38h7deecbd_1
-  - tensorboard=2.14.0=pyhd8ed1ab_0
-  - tensorboard-data-server=0.7.0=py38h3d167d9_0
-  - tensorflow=2.3.0=eigen_py38h71ff20e_0
-  - tensorflow-base=2.3.0=eigen_py38hb57a387_0
-  - tensorflow-estimator=2.6.0=py38h709712a_0
-  - termcolor=2.3.0=pyhd8ed1ab_0
-  - terminado=0.17.1=pyh41d4057_0
-  - threadpoolctl=3.2.0=pyha21a80b_0
-  - tifffile=2019.7.26.2=py38_0
-  - tinycss2=1.2.1=pyhd8ed1ab_0
-  - tk=8.6.12=h27826a3_0
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - toolz=0.12.0=pyhd8ed1ab_0
-  - tornado=6.3.3=py38h01eb140_0
-  - tqdm=4.66.1=pyhd8ed1ab_0
-  - traitlets=5.9.0=pyhd8ed1ab_0
-  - typing-extensions=4.7.1=hd8ed1ab_0
-  - typing_extensions=4.7.1=pyha770c72_0
-  - typing_utils=0.1.0=pyhd8ed1ab_0
-  - uri-template=1.3.0=pyhd8ed1ab_0
-  - urllib3=1.26.15=pyhd8ed1ab_0
-  - wcwidth=0.2.6=pyhd8ed1ab_0
-  - webcolors=1.13=pyhd8ed1ab_0
-  - webencodings=0.5.1=py_1
-  - websocket-client=1.6.2=pyhd8ed1ab_0
-  - werkzeug=2.3.7=pyhd8ed1ab_0
-  - wheel=0.41.2=pyhd8ed1ab_0
-  - widgetsnbextension=4.0.8=pyhd8ed1ab_0
-  - wrapt=1.15.0=py38h1de0b5d_0
-  - xcb-util=0.4.0=hd590300_1
-  - xcb-util-image=0.4.0=h8ee46fc_1
-  - xcb-util-keysyms=0.4.0=h8ee46fc_1
-  - xcb-util-renderutil=0.3.9=hd590300_1
-  - xcb-util-wm=0.4.1=h8ee46fc_1
-  - xgboost=1.7.6=cpu_py38h995e691_5
-  - xkeyboard-config=2.39=hd590300_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.1.1=hd590300_0
-  - xorg-libsm=1.2.4=h7391055_0
-  - xorg-libx11=1.8.6=h8ee46fc_0
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.11=hd590300_0
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h0b41bf4_1003
-  - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.6=h166bdaf_0
-  - yaml=0.2.5=h7f98852_2
-  - yarl=1.9.2=py38h01eb140_0
-  - zeromq=4.3.4=h9c3ff4c_1
-  - zipp=3.16.2=pyhd8ed1ab_0
-  - zlib=1.2.13=hd590300_5
-  - zstd=1.5.5=hfc55251_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - _py-xgboost-mutex=2.0
+  - _tflow_select=2.3.0
+  - absl-py=1.4.0
+  - aiohttp=3.8.5
+  - aiosignal=1.3.1
+  - alsa-lib=1.2.8
+  - anyio=4.0.0
+  - argon2-cffi=23.1.0
+  - argon2-cffi-bindings=21.2.0
+  - arrow=0.17.0
+  - astor=0.8.1
+  - asttokens=2.4.0
+  - astunparse=1.6.3
+  - async-lru=2.0.4
+  - async-timeout=4.0.3
+  - attr=2.5.1
+  - attrs=23.1.0
+  - babel=2.12.1
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.5
+  - beautifulsoup4=4.12.2
+  - bleach=6.0.0
+  - blinker=1.6.2
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.19.1
+  - ca-certificates=2023.7.22
+  - cached-property=1.5.2
+  - cached_property=1.5.2
+  - cachetools=5.3.1
+  - cairo=1.16.0
+  - certifi=2023.7.22
+  - cffi=1.15.1
+  - charset-normalizer=3.2.0
+  - click=8.1.7
+  - cloudpickle=3.0.0
+  - colorama=0.4.6
+  - comm=0.1.4
+  - cryptography=41.0.3
+  - cycler=0.11.0
+  - cytoolz=0.12.2
+  - dask-core=2022.12.1
+  - dbus=1.13.6
+  - debugpy=1.7.0
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - entrypoints=0.4
+  - enum34=1.1.10
+  - exceptiongroup=1.1.3
+  - executing=1.2.0
+  - expat=2.5.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fqdn=1.5.1
+  - freetype=2.12.1
+  - frozenlist=1.4.0
+  - fsspec=2023.10.0
+  - gast=0.3.3
+  - gettext=0.21.1
+  - glib=2.76.4
+  - glib-tools=2.76.4
+  - gmp=6.2.1
+  - google-auth=2.22.0
+  - google-auth-oauthlib=1.0.0
+  - google-pasta=0.2.0
+  - graphite2=1.3.13
+  - grpcio=1.57.0
+  - gst-plugins-base=1.22.3
+  - gstreamer=1.22.3
+  - h5py=2.10.0
+  - harfbuzz=7.3.0
+  - hdf5=1.10.5
+  - icu=72.1
+  - idna=3.4
+  - imagecodecs-lite=2019.12.3
+  - imageio=2.31.5
+  - importlib-metadata=6.8.0
+  - importlib_metadata=6.8.0
+  - importlib_resources=6.0.1
+  - ipykernel=6.25.2
+  - ipython=8.12.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=8.1.0
+  - isoduration=20.11.0
+  - jedi=0.19.0
+  - jellyfish=1.0.0
+  - jinja2=3.1.2
+  - joblib=1.3.2
+  - json5=0.9.14
+  - jsonpointer=2.0
+  - jsonschema=4.19.0
+  - jsonschema-specifications=2023.7.1
+  - jsonschema-with-format-nongpl=4.19.0
+  - jupyter=1.0.0
+  - jupyter-lsp=2.2.0
+  - jupyter_client=8.3.1
+  - jupyter_console=6.6.3
+  - jupyter_core=4.12.0
+  - jupyter_events=0.7.0
+  - jupyter_server=2.7.3
+  - jupyter_server_terminals=0.4.4
+  - jupyterlab=4.0.5
+  - jupyterlab_pygments=0.2.2
+  - jupyterlab_server=2.24.0
+  - jupyterlab_widgets=3.0.8
+  - keras=2.4.3
+  - keras-preprocessing=1.1.2
+  - keyutils=1.6.1
+  - kiwisolver=1.4.5
+  - krb5=1.20.1
+  - lame=3.100
+  - lcms2=2.15
+  - ld_impl_linux-64=2.40
+  - lerc=4.0.0
+  - libabseil=20230125.3
+  - libblas=3.9.0
+  - libcap=2.69
+  - libcblas=3.9.0
+  - libclang=16.0.6
+  - libclang13=16.0.6
+  - libcups=2.3.3
+  - libdeflate=1.18
+  - libedit=3.1.20191231
+  - libevent=2.1.12
+  - libexpat=2.5.0
+  - libffi=3.4.2
+  - libflac=1.4.3
+  - libgcc-ng=13.1.0
+  - libgcrypt=1.10.1
+  - libgfortran-ng=13.1.0
+  - libgfortran5=13.1.0
+  - libglib=2.76.4
+  - libgomp=13.1.0
+  - libgpg-error=1.47
+  - libgrpc=1.57.0
+  - libiconv=1.17
+  - libjpeg-turbo=2.1.5.1
+  - liblapack=3.9.0
+  - libllvm16=16.0.6
+  - libnsl=2.0.0
+  - libogg=1.3.4
+  - libopenblas=0.3.23
+  - libopus=1.3.1
+  - libpng=1.6.39
+  - libpq=15.3
+  - libprotobuf=4.23.3
+  - libsndfile=1.2.2
+  - libsodium=1.0.18
+  - libsqlite=3.43.0
+  - libstdcxx-ng=13.1.0
+  - libsystemd0=254
+  - libtiff=4.5.1
+  - libuuid=2.38.1
+  - libvorbis=1.3.7
+  - libwebp-base=1.3.1
+  - libxcb=1.15
+  - libxgboost=1.7.6
+  - libxkbcommon=1.5.0
+  - libxml2=2.11.5
+  - libzlib=1.2.13
+  - lime=0.2.0.1
+  - locket=1.0.0
+  - lz4-c=1.9.4
+  - markdown=3.4.4
+  - markupsafe=2.1.3
+  - matplotlib=3.3.4
+  - matplotlib-base=3.3.4
+  - matplotlib-inline=0.1.6
+  - mistune=3.0.1
+  - mpg123=1.31.3
+  - multidict=6.0.4
+  - mysql-common=8.0.33
+  - mysql-libs=8.0.33
+  - nbclient=0.8.0
+  - nbconvert=7.8.0
+  - nbconvert-core=7.8.0
+  - nbconvert-pandoc=7.8.0
+  - nbformat=5.9.2
+  - ncurses=6.4
+  - nest-asyncio=1.5.6
+  - networkx=3.1
+  - nltk=3.8.1
+  - notebook=7.0.3
+  - notebook-shim=0.2.3
+  - nspr=4.35
+  - nss=3.92
+  - numpy=1.19.5
+  - oauthlib=3.2.2
+  - openjpeg=2.5.0
+  - openssl=3.1.4
+  - opt_einsum=3.3.0
+  - overrides=7.4.0
+  - packaging=23.1
+  - pandas=1.4.4
+  - pandoc=3.1.3
+  - pandocfilters=1.5.0
+  - parso=0.8.3
+  - partd=1.4.1
+  - pathlib=1.0.1
+  - patsy=0.5.3
+  - pcre2=10.40
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=10.0.0
+  - pip=23.2.1
+  - pixman=0.40.0
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=3.10.0
+  - ply=3.11
+  - pooch=1.7.0
+  - prometheus_client=0.17.1
+  - prompt-toolkit=3.0.39
+  - prompt_toolkit=3.0.39
+  - protobuf=4.23.3
+  - psutil=5.9.5
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pulseaudio-client=16.1
+  - pure_eval=0.2.2
+  - py-xgboost=1.7.6
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.7
+  - pycparser=2.21
+  - pygments=2.16.1
+  - pyjwt=2.8.0
+  - pyopenssl=23.2.0
+  - pyparsing=3.1.1
+  - pyqt=5.15.9
+  - pyqt5-sip=12.12.2
+  - pysocks=1.7.1
+  - python=3.8.17
+  - python-dateutil=2.8.2
+  - python-fastjsonschema=2.18.0
+  - python-json-logger=2.0.7
+  - python_abi=3.8
+  - pytz=2023.3.post1
+  - pyu2f=0.1.5
+  - pywavelets=1.4.1
+  - pyyaml=6.0.1
+  - pyzmq=25.1.1
+  - qt-main=5.15.8
+  - qtconsole=5.4.4
+  - qtconsole-base=5.4.4
+  - qtpy=2.4.0
+  - re2=2023.03.02
+  - readline=8.2
+  - referencing=0.30.2
+  - regex=2023.8.8
+  - requests=2.31.0
+  - requests-oauthlib=1.3.1
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rpds-py=0.10.2
+  - rsa=4.9
+  - scikit-image=0.19.3
+  - scikit-learn=0.23.2
+  - scipy=1.8.1
+  - seaborn=0.12.2
+  - seaborn-base=0.12.2
+  - send2trash=1.8.2
+  - setuptools=68.1.2
+  - sip=6.7.11
+  - six=1.16.0
+  - sniffio=1.3.0
+  - soupsieve=2.5
+  - stack_data=0.6.2
+  - statsmodels=0.13.5
+  - tensorboard=2.14.0
+  - tensorboard-data-server=0.7.0
+  - tensorflow=2.3.0
+  - tensorflow-base=2.3.0
+  - tensorflow-estimator=2.6.0
+  - termcolor=2.3.0
+  - terminado=0.17.1
+  - threadpoolctl=3.2.0
+  - tifffile=2019.7.26.2
+  - tinycss2=1.2.1
+  - tk=8.6.12
+  - toml=0.10.2
+  - tomli=2.0.1
+  - toolz=0.12.0
+  - tornado=6.3.3
+  - tqdm=4.66.1
+  - traitlets=5.9.0
+  - typing-extensions=4.7.1
+  - typing_extensions=4.7.1
+  - typing_utils=0.1.0
+  - uri-template=1.3.0
+  - urllib3=1.26.15
+  - wcwidth=0.2.6
+  - webcolors=1.13
+  - webencodings=0.5.1
+  - websocket-client=1.6.2
+  - werkzeug=2.3.7
+  - wheel=0.41.2
+  - widgetsnbextension=4.0.8
+  - wrapt=1.15.0
+  - xcb-util=0.4.0
+  - xcb-util-image=0.4.0
+  - xcb-util-keysyms=0.4.0
+  - xcb-util-renderutil=0.3.9
+  - xcb-util-wm=0.4.1
+  - xgboost=1.7.6
+  - xkeyboard-config=2.39
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.1.1
+  - xorg-libsm=1.2.4
+  - xorg-libx11=1.8.6
+  - xorg-libxau=1.0.11
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.11
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xf86vidmodeproto=2.3.1
+  - xorg-xproto=7.0.31
+  - xz=5.2.6
+  - yaml=0.2.5
+  - yarl=1.9.2
+  - zeromq=4.3.4
+  - zipp=3.16.2
+  - zlib=1.2.13
+  - zstd=1.5.5
   - pip:
       - cvxopt==1.3.2
       - deprecation==2.1.0
@@ -344,4 +344,3 @@ dependencies:
       - python-graphviz==0.20.1
       - sortedcontainers==2.4.0
       - stringdist==1.0.9
-prefix: /home/be_cracked/.conda/envs/RTM-REM
